--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,10 @@ services:
       - "27017:27017"
     env_file:
       - mongo.env
+  app:
+    build: ./
+    container_name: todo-app
+    ports:
+      - "3005:3005"
+    env_file:
+      - app.env
